# menyoo-watch-dogs-trainer

./: .gitignore  README.md
.github/workflows/: release.yml
cheat table/: WatchDogs_Readme V1.6.txt  WatchDogs_v1.6_Released.CT  Watch_Dogs.CT  watch-dogs.CT
menyoo-launcher/: package-lock.json  package.json  vite.config.js
menyoo-launcher/src/: index.html  main.js  styles.css
menyoo-launcher/src-tauri/: 2  Cargo.toml  tauri.conf.json
menyoo-launcher/src-tauri/icons/: icon.icns
menyoo-launcher/src-tauri/src/: lib.rs  lib.rs.bak  main.rs
packaging/: INSTALLER_NOTES.md
trainer/: CMakeLists.txt  diagnosis.md
trainer/loader/: WatchDogsLoader.rc  injector.cpp  injector.h  main.cpp
trainer/scripts/: build.bat  build_with_vs.bat  configure_with_vs.bat  setup_deps.bat
trainer/src/: common.h  dllmain.cpp
trainer/src/cheats/: ammo.cpp  battery.cpp  cheat_manager.cpp  cheat_manager.h  crafting.cpp  digital_trips.cpp  focus.cpp  fov.cpp  godmode.cpp  hacking.cpp  misc.cpp  money.cpp  noclip.cpp  noclip.h  skills.cpp  stealth.cpp  teleport.cpp  teleport.h  time_of_day.cpp  vehicles.cpp  wanted.cpp
trainer/src/config/: config.cpp  config.h
trainer/src/diagnostics/: diagnostics.cpp  diagnostics.h
trainer/src/hooks/: dx11_hook.cpp  dx11_hook.h  hooks.cpp  hooks.h
trainer/src/logging/: logger.cpp  logger.h
trainer/src/memory/: memory.cpp  memory.h  pattern_scan.cpp  pattern_scan.h  pointer_chain.cpp  pointer_chain.h
trainer/src/process/: process.cpp  process.h
trainer/src/ui/: menu.cpp  menu.h  ui.cpp  ui.h
